<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/activity_setting">
    <PreferenceScreen
        android:key="history_category"
        android:title="@string/title_history">
        <ritik.launcher.preference.ResetPreference
            android:dialogMessage="@string/reset_warn"
            android:key="reset"
            android:order="10"
            android:title="@string/reset_name" />
        <ritik.launcher.preference.ResetFavoritesPreference
            android:dialogMessage="@string/reset_favorites_warn"
            android:key="reset"
            android:order="11"
            android:title="@string/reset_favorites_name" />
        <ritik.launcher.preference.ResetExcludedAppsPreference
            android:dialogMessage="@string/reset_excluded_apps_warn"
            android:key="reset-excluded-apps"
            android:order="12"
            android:title="@string/reset_excluded_apps_name" />
        <EditTextPreference
            android:defaultValue="25"
            android:key="number-of-display-elements"
            android:inputType="number"
            android:order="45"
            android:title="@string/number_ofdisplay_items"
            android:textColor="?attr/searchColor"
            />
        <PreferenceCategory
            android:order="50"
            android:title="@string/alternate_history_inputs">

            <ritik.launcher.SwitchPreference
                android:defaultValue="false"
                android:key="enable-sms-history"
                android:title="@string/enable_sms" />
            <ritik.launcher.SwitchPreference
                android:defaultValue="false"
                android:key="enable-phone-history"
                android:title="@string/enable_phone" />
            <ritik.launcher.SwitchPreference
                android:defaultValue="true"
                android:key="enable-app-history"
                android:title="@string/enable_app" />
            <ritik.launcher.SwitchPreference
                android:defaultValue="false"
                android:key="exclude-favorites"
                android:title="@string/exclude_favorites" />
        </PreferenceCategory>
    </PreferenceScreen>
    <PreferenceScreen android:title="@string/title_ui" android:key="ui-holder">
        <ListPreference
            android:defaultValue="transparent"
            android:entries="@array/themesEntries"
            android:entryValues="@array/themesValues"
            android:key="theme"
            android:title="@string/theme_name" />
        <ListPreference
            android:defaultValue="default"
            android:key="icons-pack"
            android:title="@string/icons_pack_name" />
        <ritik.launcher.preference.PreferenceColor
            android:key="notification-bar-color"
            android:title="@string/notification_bar_color" />
        <ritik.launcher.preference.PreferenceColor
            android:key="primary-color"
            android:title="@string/main_color" />


        <ListPreference
            android:defaultValue="4"
            android:entries="@array/colValues"
            android:entryValues="@array/colValues"
            android:key="col-values"
            android:title="@string/col_no" />
        <PreferenceCategory android:title="@string/keyboard_options">
            <ritik.launcher.SwitchPreference
                android:defaultValue="false"
                android:key="display-keyboard"
                android:title="@string/keyboard_name" />
            <ritik.launcher.SwitchPreference
                android:defaultValue="false"
                android:key="enable-keyboard-workaround"
                android:summary="@string/keyboard_workaround_desc"
                android:title="@string/keyboard_workaround_name" />
        </PreferenceCategory>
        <PreferenceCategory android:title="@string/history_hide_name">
            <ritik.launcher.SwitchPreference
                android:defaultValue="false"
                android:key="history-hide"
                android:summary="@string/history_hide_desc"
                android:title="@string/history_hide_name" />
            <ritik.launcher.SwitchPreference
                android:defaultValue="false"
                android:dependency="history-hide"
                android:key="history-onclick"
                android:title="@string/history_onclick_name" />
        </PreferenceCategory>
        <PreferenceCategory android:title="@string/misc">
            <ListPreference
                android:defaultValue="invertedAlphabetical"
                android:entries="@array/sortAppListEntries"
                android:entryValues="@array/sortAppListValues"
                android:key="sort-apps"
                android:title="@string/order_apps_name" />
            <ritik.launcher.SwitchPreference
                android:defaultValue="false"
                android:key="enable-favorites-bar"
                android:title="@string/enable_favorites_bar" />
            <ritik.launcher.SwitchPreference
                android:defaultValue="true"
                android:key="force-portrait"
                android:title="@string/portrait_title" />

            <ritik.launcher.SwitchPreference
                android:defaultValue="false"
                android:key="icons-hide"
                android:summary="@string/icons_hide_desc"
                android:title="@string/icons_hide_main" />

            <ritik.launcher.SwitchPreference
                android:defaultValue="false"
                android:key="large-search-bar"
                android:title="@string/large_search_bar" />

        </PreferenceCategory>
    </PreferenceScreen>
    <PreferenceScreen
        android:key="providers"
        android:title="@string/title_providers">
        <ritik.launcher.SwitchPreference
            android:defaultValue="true"
            android:key="enable-contacts"
            android:title="@string/contacts_name" />
        <ritik.launcher.SwitchPreference
            android:defaultValue="true"
            android:key="enable-settings"
            android:title="@string/settings_name" />
        <ritik.launcher.SwitchPreference
            android:defaultValue="true"
            android:key="enable-toggles"
            android:title="@string/toggles_name" />
        <ritik.launcher.SwitchPreference
            android:defaultValue="true"
            android:key="enable-phone"
            android:title="@string/phone_name" />
        <ritik.launcher.SwitchPreference
            android:defaultValue="true"
            android:key="enable-shortcuts"
            android:title="@string/shortcuts_name" />
    </PreferenceScreen>
    <PreferenceScreen android:title="@string/title_advanced">
        <ritik.launcher.preference.DefaultLauncherPreference
            android:dialogMessage="@string/default_launcher_warn"
            android:key="default-launcher"
            android:title="@string/default_launcher_title" />
        <ListPreference
            android:defaultValue="recency"
            android:entries="@array/historyModeEntries"
            android:entryValues="@array/historyModeValues"
            android:key="history-mode"
            android:summary="@string/history_mode_desc"
            android:title="@string/history_mode_name" />
        <ritik.launcher.preference.FreezeHistorySwitch
            android:defaultValue="false"
            android:key="freeze-history"
            android:title="@string/freeze_history_name" />
        <ritik.launcher.preference.RootModeSwitch
            android:defaultValue="false"
            android:key="root-mode"
            android:summary="@string/root_mode_desc"
            android:title="@string/root_mode_name" />
        <ritik.launcher.preference.RestartPreference
            android:dialogMessage="@string/restart_warn"
            android:key="restart"
            android:summary="@string/restart_desc"
            android:title="@string/restart_name" />
    </PreferenceScreen>
    <Preference
        android:key="rate-app"
        android:title="Rate the app">
    </Preference>
</PreferenceScreen>
